# ATLAS_Online_Monitor

./: .gitignore  CMakeLists.txt  LinkDef.h  python  vivado_lab.jou  vivado_lab_11022.backup.jou  vivado_lab_11373.backup.jou  vivado_lab_23803.backup.jou  vivado_lab_27611.backup.jou  vivado_lab_pid11022.str  vivado_lab_pid11373.str  vivado_lab_pid23803.str  vivado_lab_pid24136.str
ROOT_plot/: .gitignore  CMakeCache.txt  CMakeLists.txt  Changelog.txt  Decode.sh  FindPCAP.cmake  Geometry.cxx  LinkDef.h  Makefile  Monitor.cpp  SignalHandlers.cpp  SignalHandlers.h  StartDAQ.cpp  StartMonitor.cpp  StartMonitor.sublime-workspace  bashgcc  cmake_install.cmake  monitorConfig.cpp  rootlogon.C  setEcapPermissions.sh  settings.txt  setup.sh  testDecode.sh  testGui.sh  vivado_lab.jou  vivado_lab_21253.backup.jou  vivado_lab_21813.backup.jou  vivado_lab_pid21253.str  vivado_lab_pid21813.str
ROOT_plot/DAQMonitor/: DAQState.cpp  DAQState.h  DataCaptureOperations.cpp  DataCaptureOperations.h  DataRunOperations.cpp  DataRunOperations.h  LockableStream.cpp  LockableStream.h  PacketDecodingOperations.cpp  PacketDecodingOperations.h  PlotSavingOperations.cpp  PlotSavingOperations.h  RingBuffer.h
ROOT_plot/DAQMonitor/DataModel/: DAQData.cpp  DAQData.h  GlobalIncludes.h  Plots.cpp  Plots.h
ROOT_plot/DAQMonitor/ErrorHandling/: ErrorOperations.cpp
ROOT_plot/DAQMonitor/EthernetCapture/: DataCaptureOperations.cpp  DataCaptureOperations.h  Phase2EthernetCapture_Standalone.cpp  RunDataCapture.cpp
ROOT_plot/DAQMonitor/FileManagement/: FileManager.cpp  FileManager.h
ROOT_plot/DAQMonitor/PacketDecoding/: PacketDecodingOperations.cpp  Phase2Decode_Standalone.cpp  RunDecoding.cpp
ROOT_plot/DAQMonitor/PlotSaving/: PlotSavingOperations.cpp
ROOT_plot/DAQMonitor/Plotting/: PlottingOperations.cpp
ROOT_plot/DAQMonitor/ProgramControl/: SigHandlers.cpp  Terminator.cpp  Threads.h
ROOT_plot/DAQMonitor/Views/: RunView.cpp  RunView.h
ROOT_plot/Decoder/: Phase2Decode_Standalone.cpp
ROOT_plot/Decoder/src/: Decoder.cpp  Decoder.h  EventBufferValidator.cpp  EventBufferValidator.h  EventDecoding.cpp  EventDecoding.h  SignalDecoding.cpp  SignalDecoding.h
ROOT_plot/EthernetCapture/: Phase2EthernetCapture_Standalone.cpp
ROOT_plot/EthernetCapture/src/: DeviceManager.cpp  DeviceManager.h  DeviceSelector.cpp  NetworkDeviceException.h  PCapDevice.cpp  PCapDevice.h  PCapSessionHandler.cpp  PCapSessionHandler.h
ROOT_plot/GUI/: BuildGUI.cpp  BuildGUI.h
ROOT_plot/GUI/Components/: ConfFileSelector.cpp  ConfFileSelector.h  DAQManager.cpp  DAQManager.h  DataSourcePanel.cpp  DataSourcePanel.h  DeviceSelectorPanel.cpp  DeviceSelectorPanel.h  FileSelectorPanel.h  Menu.cpp  Menu.h  PageCanvas.cpp  PageCanvas.h  ProgressBar.h  RunMenuBar.cpp  RunMenuBar.h  RunNumberPanel.cpp  RunNumberPanel.h  RunView.cpp  RunView.h  Submenu.cpp  Submenu.h  TabPanel.cpp  TabPanel.h  TabSelector.h  UpdatePacket.h
ROOT_plot/GUI/Core/: UIException.cpp  UILock.cpp  UILock.h  UILoop.cpp  UILoop.h  UISignals.h
ROOT_plot/GUI/Tabs/: CanvasTab.h  EfficiencyDisplay.cpp  ErrorView.cpp  ErrorView.h  EventTab.cpp  EventTab.h  GraphPlotter.cpp  GraphPlotter.h  HistogramPlotter.cpp  HistogramPlotter.h  PlotWindow.cpp  PlotWindow.h  ResidualsDisplay.cpp  TabPanel.cpp  TabPanel.h  UITab.cpp  UITab.h
ROOT_plot/Logging/: ErrorLogger.cpp  ErrorLogger.h
ROOT_plot/MainMenu/: EntryOperations.cpp  EntryOperations.h
ROOT_plot/MainMenu/Views/: EntryView.cpp  EntryView.h
ROOT_plot/MuonReco/: DAQData.h  Decoder.h  Event.h  EventDisplay.h  Geometry.h  RTParam.h  ResolutionResult.h  Signal.h  SignalDecoding.h  Track.h  TrackParam.h
ROOT_plot/Tests/: testTrackParam.cpp
ROOT_plot/_deprecated/: StartMonitor.cpp  testDAQ.sh
ROOT_plot/analysis/: MonitorHooks.cpp  MonitorHooks.h
ROOT_plot/conf/: T0.root  run_20240412.conf  run_20250110.conf  run_20250115.conf
ROOT_plot/conf/autocalibration/: autoCalibratedRT_0_100000.root
ROOT_plot/macros/: DAQData.cpp  DAQState.cpp  DAQState.h  DecodeOffline.cpp  Display.cpp  ErrorLogger.cpp  ErrorLogger.h  ErrorLogger.test.cpp  Event.cpp  EventBuffer.cpp  EventDecoding.cpp  EventProcessing.cpp  GlobalIncludes.h  LockableStream.cpp  Monitor.cpp  MonitorFile.cpp  Mutexes.cpp  ParseSignal.cpp  PlotMaker.cpp  RunDataCapture.cpp  RunDecoding.cpp  SignalDecoding.cpp  SignalProcessing.cpp  SignalReader.cpp  TEMP.txt  monitorFile.cpp  test.cpp
ROOT_plot/macros/DataModel/: DAQData.cpp  Plots.cpp
ROOT_plot/macros/FileAppendMonitor/: FileAppendMonitor.cpp  FileAppendMonitor.h  FileAppendMonitor.test.cpp
ROOT_plot/macros/UIFramework/: GUIMainFrame.cpp  GUIManager.cpp  Histogram.cpp  Panel.cpp  RadioPanel.cpp  StartGUI.cpp  UIElement.cpp  UIException.cpp  UIException.h  UILock.cpp  UIManager.cpp  UISignals.cpp  UISignals.h  testGui.sh
ROOT_plot/noise/: smdt_noise.py
ROOT_plot/output/BAD_TDC_NUM/: BAD_TDC_NUM_rate.csv
ROOT_plot/output/run_20240829_160255/: run_20240829_160255_rate.csv
ROOT_plot/output/run_20240829_160730/: run_20240829_160730_rate.csv
ROOT_plot/output/run_20240829_161607/: run_20240829_161607_rate.csv
ROOT_plot/output/run_20240829_164919/: run_20240829_164919_rate.csv
ROOT_plot/output/run_20240829_170206/: run_20240829_170206_rate.csv
ROOT_plot/output/run_20240829_170607/: run_20240829_170607_rate.csv
ROOT_plot/src/: Cluster.cpp  Cluster.h  ConfigParser.cxx  Event.cpp  Event.h  EventDisplay.cxx  EventDisplay.h  EventID.cpp  EventID.h  Geometry.cpp  Hit.cpp  Hit.h  HitCluster.cpp  HitFinder.cpp  Noisecut.cpp  ParameterSet.cxx  RecoObject.h  Signal.cpp  Signal.h  Track.cpp  Track.h
ROOT_plot/tests/: CMakeLists.txt  LockableStream.test.cpp  RingBuffer.test.cpp
_deprecated/DAQ/: CMakeCache.txt  CMakeLists.txt  G__miniDAQ_CINT.cxx  Makefile  Makefile2  PcapDev.cpp  PcapDev.h  bashgcc  libminiDAQ_CINT.rootmap  libminiDAQ_CINT_rdict.pcm  mac_daq_bak  vivado_lab.jou  vivado_lab_14215.backup.jou  vivado_lab_18188.backup.jou  vivado_lab_pid14215.str  vivado_lab_pid18188.str  vivado_lab_pid22234.str
lib/DAQDecode/: CMakeLists.txt
tests/: CMakeLists.txt  SettingsManager.test.cpp
(+915 files in other folders)
